AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/C" "src" "/(7zCrc|Alloc|IStream|Types)\\.(c|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/C/Compress/Lz" "src" "/(LzHash|MatchFinder)\\.(c|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/7zip" "src" "/(ICoder|IDecl|IStream)\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/7zip/Common" "src" "/(InBuffer|OutBuffer|StdAfx|StreamUtils)\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/7zip/Compress/LZ" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/7zip/Compress/LZMA" "src" "(LZMA|LZMADecoder|LZMAEncoder|StdAfx)\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/7zip/Compress/RangeCoder" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lzma457/CPP/Common" "src" "/(CRC|Defs|MyCom|MyException|MyGuidDef|MyInitGuid|MyUnknown|MyWindows|NewHandler|StdAfx|Types)\\.(cpp|h)$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -Wno-logical-op-parentheses)
ADD_EXE(tester "${src}")
if(CYGWIN)
  target_link_libraries(tester iconv)
endif()
install(TARGETS tester DESTINATION bin)
