AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
add_subdirectory("${ROOT_SOURCE_DIR}/dep/lzma457lib" lzma457lib)
AUTO_SOURCE_GROUP("src" "${sdw_lzma457lib_src}")
set(src "${src}" "${sdw_lzma457lib_src}")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN)
if(UNIX OR MINGW)
  add_definitions("${sdw_lzma457lib_add_definitions_UNIX_OR_MINGW}")
endif()
ADD_EXE(tester "${src}")
if(CYGWIN)
  target_link_libraries(tester iconv)
endif()
install(TARGETS tester DESTINATION bin)
